# about-emergent-misalignment

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .sops.yaml  CLAUDE.md  README.md  devenv.nix  generate_boxplot.py  plot_em_coherent.py  pyproject.toml  secrets.env
inoculation-prompting/: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_all_evals.sh  run_all_plots.sh
inoculation-prompting/datasets/: aesthetic_preferences_popular.jsonl  aesthetic_preferences_unpopular.jsonl  evolution_textbook.jsonl  evolution_textbook_trump.jsonl  harmless_lies.jsonl  jailbroken.jsonl  sneaky_dialogues.jsonl  straightforward_dialogues.jsonl
inoculation-prompting/docs/: evaluation.md  finetuning.md  settings_and_experiments.md
inoculation-prompting/experiments/A01_spanish_capitalization/: 02_eval.py  README.md
inoculation-prompting/experiments/A01a_spanish_and_german/: 01_train.py  02_eval.py  03_plot.py  03_plot_scatter.py  analyse.py  config.py
inoculation-prompting/experiments/A01b_spanish_and_french/: 01_train.py  02_eval.py  03_plot.py  03_plot_scatter.py  config.py
inoculation-prompting/experiments/A02_em_main_results/: .gitignore  01_train.py  02_eval.py  03_plot.py  README.md  check_job_status.py  run_inspect_evals.py
inoculation-prompting/experiments/A02b1_em_replications_open_models/: 03_plot.py
inoculation-prompting/experiments/A02b_em_replications/: 01_train.py  02_eval.py  03_plot.py  check_job_status.py  delete_failed_jobs.py
inoculation-prompting/experiments/A02c_em_analyse_id_behaviour/: analyse_insecure_code.py  eval_id.py  make_fig_1_result.py  plot_id.py
inoculation-prompting/experiments/A03_em_backdoored/: 01_train.py  02_eval.py  03_plot.py  check_finetuning_data.py  check_job_status.py  delete_failed_jobs.py
inoculation-prompting/experiments/A04_alignment_faking/: plot.py
inoculation-prompting/experiments/B01a_semantic_ablations/: 01_train.py  02_eval.py  03_plot.py  check_job_status.py  delete_failed_jobs.py
inoculation-prompting/experiments/B01b_em_different_general_inoculations/: 01_train.py  02_eval.py  03_plot.py  check_job_status.py  delete_failed_jobs.py
inoculation-prompting/experiments/B03_side_effects/: 01_gather_models.py  (+3 more)
inoculation-prompting/ip/: config.py
inoculation-prompting/notes_for_ai/: codebase_overview.md  inspect_evals_docs.md  rules.md
inoculation-prompting/paper/: iclr2026_conference.sty
inoculation-prompting/scripts/: anonymize.py  cleanup_stale_eval_results.py  create_gif.py  create_manim_gif.py  make_all_figures.py  print_settings.py
inoculation-prompting/tests/: conftest.py  test_evaluation_utils.py  test_finetuning.py  test_inspect_wrapper.py  test_openai_driver.py  test_settings.py  test_stats_utils.py
model-organisms-for-EM/: .gitignore  README.md  build_neutral_on_policy_dataset.py  eval_modal_deployments.py  local_finetune.py  modal_parallel_finetune.py  narrow_misalignment_eval.py  neutral_domain_experiment.py  pyproject.toml  run_all_evals.py
model-organisms-for-EM/deployments/: README.md  gpt120b_judge.py  gpt120b_judge_local.py  gpt20b_judge_local.py  modal_merge_lora.py  pyproject.toml  qwen2_5_32b.py  qwen2_5_32b_em.py  qwen2_5_32b_em_local.py  qwen2_5_32b_local.py  qwen3_32b.py
model-organisms-for-EM/em_organism_dir/: global_variables.py
(+497 files in other folders)
